--- a/MyThesis/Monitor/app/src/loginPage/loginPage.html
+++ b/MyThesis/Monitor/app/src/loginPage/loginPage.html
@@ -1,7 +1,7 @@
 ﻿<div class="col-md-offset-4 col-md-4">
     <form class="form-horizontal login-page__form col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
         <div class="form-group">
-            <label class="login-page__form__title control-label">Recom</label>
+            <label class="login-page__form__title control-label">THESIS</label>
         </div>
         <div class="form-group">
             <input type="text" class="form-control login-page__form__input" placeholder="Tài khoản" ng-model="vm.user.UserName">
