--- a/MyThesis/Simulator/app/index.html
+++ b/MyThesis/Simulator/app/index.html
@@ -11,53 +11,47 @@
     <link href="bower_components/Ionicons/css/ionicons.min.css" rel="stylesheet" />
     <link href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" rel="stylesheet" />
     <link href="bower_components/angularjs-slider/dist/rzslider.min.css" rel="stylesheet" />
-    <link href="assets/lumio/css/styles.css" rel="stylesheet" />
     <link href="assets/css/home.css" rel="stylesheet" />
-
-    <script src="assets/lumio/js/lumino.glyphs.js"></script>
+    <link href="assets/css/push-down.css" rel="stylesheet" />
 
 </head>
 
 <body ng-controller="homeCtrl as vm">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"><span>Ship</span>Simulator</a>
-                <!--<ul class="user-menu">
-                    <li class="dropdown pull-right">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
-                            <li><a href="#"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>
-                            <li><a href="#"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>-->
-            </div>
-
-        </div><!-- /.container-fluid -->
-    </nav>
-
-    <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
+    <div class="col-xs-12 col-sm-12 col-md-12 home__navbar">
+        <span class="home__navbar__brand">THESIS</span>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 home__menu">
+        <ul class="list-inline home__menu__ul">
+            <li class="home__menu__li" ng-class="{'home__menu__li--active': vm.pushDownSettings.mode.addShip}">
+                <a ng-click="vm.showAddShip()"><i class="fa fa-ship"></i>Thêm tàu</a>
+            </li>
+            <li class="home__menu__li" ng-class="{'home__menu__li--active': vm.pushDownSettings.mode.addWarning}">
+                <a ng-click="vm.showAddWarning()"><i class="fa fa-exclamation-triangle"></i>Thêm cảnh báo</a>
+            </li>
+            <li class="home__menu__li" ng-class="{'home__menu__li--active': vm.pushDownSettings.mode.addStorm}">
+                <a ng-click="vm.showAddStorm()"><i class="fa fa-skyatlas"></i>Thêm bão</a>
+            </li>
+            <li class="home__menu__li" ng-class="{'home__menu__li--active': vm.pushDownSettings.mode.editSettings}">
+                <a ng-click="vm.showEditSettings()"><i class="fa fa-cog"></i>Tùy chỉnh</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="container">
+            <push-down ng-if="vm.pushDownSettings.isActive">
+                <add-ship ng-if="vm.pushDownSettings.mode.addShip" overlay="vm.overlay" users="vm.users"></add-ship>
+            </push-down>
+        </div>
+    </div>
+    <!--<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
         <ul class="nav menu">
             <li class="clickable-element"><a ng-click="vm.openCreateShipDialog()"><span class="menu-icon ion-android-boat"></span>Thêm tàu</a></li>
             <li class="clickable-element"><a ng-click="vm.openCreateWarningLocationDialog()"><span class="menu-icon ion-android-pin"></span>Thêm cảnh báo</a></li>
             <li class="clickable-element"><a ng-click="vm.openCreateStormDialog()"><span class="menu-icon ion-ios-thunderstorm-outline"></span>Thêm bão</a></li>
             <li class="clickable-element"><a ng-click="vm.openSimulatorSettingDialog()"><span class="menu-icon ion-android-settings"></span>Cài đặt</a></li>
-            <!--<li class="clickable-element"><a><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Tables</a></li>
-            <li class="clickable-element"><a><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Forms</a></li>
-            <li class="clickable-element"><a><svg class="glyph stroked app-window"><use xlink:href="#stroked-app-window"></use></svg> Alerts &amp; Panels</a></li>
-            <li class="clickable-element"><a><svg class="glyph stroked star"><use xlink:href="#stroked-star"></use></svg> Icons</a></li>
-            <li class="clickable-element" role="presentation" class="divider"></li>
-            <li class="clickable-element"><a href=""><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Login Page</a></li>-->
+
         </ul>
-    </div><!--/.sidebar-->
+    </div>
 
     <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
         <div class="row">
@@ -67,9 +61,9 @@
                     <ship ship-info="ship" ship-index="$index" setting-timeout="vm.settingTimeout" overlay="vm.overlay"></ship>
                 </div>
             </div>
-        </div><!--/.row-->
+        </div>
 
-    </div> <!--/.main-->
+    </div>-->
 
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="overlay" id="overlay">
@@ -100,6 +94,13 @@
     <script src="src/home/homeDataSvc.js"></script>
 
     <script src="src/ship/shipDataSvc.js"></script>
+
+    <script src="src/pushDown/pushDownSvc.js"></script>
+    <script src="src/pushDown/pushDownCtrl.js"></script>
+    <script src="src/pushDown/push-down.js"></script>
+
+    <script src="src/addShip/addShipCtrl.js"></script>
+    <script src="src/addShip/add-ship.js"></script>
 
     <script src="src/createShipDialog/createShipDialogSvc.js"></script>
     <script src="src/createShipDialog/createShipDialogCtrl.js"></script>
