--- a/MyThesis/Simulator/app/src/ship/ship.html
+++ b/MyThesis/Simulator/app/src/ship/ship.html
@@ -1,24 +1,24 @@
-﻿<div class="alert alert-info">
-    <button type="button" class="close" ng-click="vm.removeShip()">&times;</button>
-    <table class="table table-bordered ship-info-table ">
+﻿<div>
+    <button type="button" class="close ship__remove-button" ng-click="vm.removeShip()">&times;</button>
+    <table class="table ship-info-table">
         <tbody>
-        <tr>
-            <td>Mã tàu: {{vm.shipInfo.Id}}</td>
-            <td>
-                <button class="btn btn-success" ng-click="vm.sendLocation()">Gửi tọa độ</button>
-                <button class="btn btn-danger" ng-click="vm.sendSosMessage()">Gửi SoS</button>
-            </td>
-        </tr>
-        <tr>
-            <td>Hướng di chuyển: <input type="text" ng-model="vm.currentMovingAngle" /></td>
-            <td>
-                Tự động gửi tọa độ: <input type="checkbox" ng-model="vm.autoSendLocationStatus" ng-change="vm.autoSendLocation()">
-            </td>
-        </tr>
-        <tr>
-            <td>Vĩ độ -- Kinh độ: {{vm.currentLocation.Latitude}} -- {{vm.currentLocation.Longitude}}</td>
-            <td>Di chuyển: <input type="checkbox" ng-model="vm.isMoving" ng-change="vm.autoUpdateLocation()"></td>
-        </tr>
+            <tr>
+                <td>Mã tàu: {{vm.shipInfo.Id}}</td>
+                <td>
+                    <button class="btn btn-success" ng-click="vm.sendLocation()">Gửi tọa độ</button>
+                    <button class="btn btn-danger" ng-click="vm.sendSosMessage()">Gửi SoS</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Hướng di chuyển: <input type="text" ng-model="vm.currentMovingAngle" /></td>
+                <td>
+                    Tự động gửi tọa độ: <input type="checkbox" ng-model="vm.autoSendLocationStatus" ng-change="vm.autoSendLocation()">
+                </td>
+            </tr>
+            <tr>
+                <td>Vĩ độ -- Kinh độ: {{vm.currentLocation.Latitude}} -- {{vm.currentLocation.Longitude}}</td>
+                <td>Di chuyển: <input type="checkbox" ng-model="vm.isMoving" ng-change="vm.autoUpdateLocation()"></td>
+            </tr>
         </tbody>
     </table>
 </div>
