generate random locations

--- a/MyThesis/Monitor/app/src/home/home.html
+++ b/MyThesis/Monitor/app/src/home/home.html
@@ -21,12 +21,11 @@
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-12 main__container">
-    <div class="col-xs-3 col-sm-3 col-md-3 small-col" ng-if="vm.warningMessage || vm.warningMessageForStorm">
+    <div class="col-xs-3 col-sm-3 col-md-3 small-col" ng-if="vm.warningMessages.length > 0">
         <div class="home__warning-title">Cảnh Báo</div>
-        <p ng-bind-html="vm.warningMessage" ng-if="vm.warningMessage"></p>
-        <p ng-bind-html="vm.warningMessageForStorm" ng-if="vm.warningMessageForStorm"></p>
+        <p ng-repeat="item in vm.warningMessages" ng-bind="item"></p>
     </div>
-    <div class="" ng-class="{'col-xs-12 col-sm-12 col-md-12': !vm.warningMessage && !vm.warningMessageForStorm, 'col-xs-9 col-sm-9 col-md-9 big-col': vm.warningMessage || vm.warningMessageForStorm}">
+    <div class="" ng-class="{'col-xs-12 col-sm-12 col-md-12': vm.warningMessages.length <= 0, 'col-xs-9 col-sm-9 col-md-9 big-col': vm.warningMessages.length > 0}">
         <div id='legend' style='display:none;'>
             <strong>Chú thích:</strong>
             <nav class='legend clearfix'>
