--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -30,16 +30,17 @@
         <div id='legend' style='display:none;'>
             <strong>Chú thích:</strong>
             <nav class='legend clearfix'>
-                <span style='background: url("../../assets/img/ship-marker/green.png") no-repeat;'></span>
-                <span style='background: url("../../assets/img/ship-marker/international-ship.png") no-repeat; '></span>
-                <span style='background: url("../../assets/img/warning-location/reef.png") no-repeat;'></span>
-                <span style='background: url("../../assets/img/warning-location/pirate-ship.png") no-repeat;'></span>
-                <span style='background: url("../../assets/img/warning-location/china-ship.png") no-repeat;'></span>
+                <span style='background: url("../../assets/img/ship-marker/green-2.png") no-repeat center;'></span>
+                <span style='background: url("../../assets/img/ship-marker/international-ship.png") no-repeat center; '></span>
+                <span style='background: url("../../assets/img/warning-location/reef.png") no-repeat center;'></span>
+                <span style='background: url("../../assets/img/warning-location/pirate-ship.png") no-repeat center;'></span>
+                <span style='background: url("../../assets/img/warning-location/china-ship.png") no-repeat center;'></span>
                 <label>Tàu ngư dân</label>
                 <label>Tàu quốc tế</label>
                 <label>Bãi rạng</label>
                 <label>Hải tặc</label>
                 <label>Tàu TQ</label>
+            </nav>
         </div>
         <div id="leaflet-map" class="leaflet-map"></div>
     </div>
