--- a/MyThesis/Monitor/app/src/editStorm/storm.html
+++ b/MyThesis/Monitor/app/src/editStorm/storm.html
@@ -3,7 +3,7 @@
     <div class="main__navbar__brand">
         <span>THESIS</span>
         <div class="main__navbar__user">
-            <span class="main__navbar__user__text">{{vm.currentUser.UserName}}</span>
+            <span class="main__navbar__user__text">{{vm.currentUser.FullName}}</span>
             <a class="main__navbar__user__button" ng-click="vm.logout()"><span class="glyphicon glyphicon-off"></span></a>
         </div>
     </div>
