--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -2,7 +2,7 @@
     <div class="main__navbar__brand">
         <span>THESIS</span>
         <div class="main__navbar__user">
-            <span class="main__navbar__user__text">{{vm.currentUser.UserName}}</span>
+            <span class="main__navbar__user__text">{{vm.currentUser.FullName}}</span>
             <a class="main__navbar__user__button" ng-click="vm.logout()"><span class="glyphicon glyphicon-off"></span></a>
         </div>
     </div>
@@ -14,7 +14,7 @@
         <li class="main__menu__li"><a href="#/home">Trang chủ</a></li>
         <li class="main__menu__li main__menu__li--active"><a>Hành trình tàu</a></li>
         <li class="main__menu__li"><a href="#/edit">Thông Tin Tàu</a></li>
-        <li class="main__menu__li"><a href="#/storm">Thông Tin Bão</a></li>
+        <li class="main__menu__li" ng-if="vm.currentUser.Id === 1"><a href="#/storm">Thông Tin Bão</a></li>
         <li class="main__menu__li"><a href="#/weather">Thời Tiết</a></li>
         <li class="main__menu__li"><a href="#/law">Pháp Luật</a></li>
     </ul>
