--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -15,6 +15,7 @@
     <link href="assets/script/LeafletStyledLayerControl/css/styledLayerControl.css" rel="stylesheet" />
     <link href="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.css" rel="stylesheet" />
     <link href="assets/script/leaflet-openweathermap/leaflet-openweathermap.css" rel="stylesheet" />
+    <link href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" />
 
     <link href="assets/css/common.css" rel="stylesheet" />
     <link href="assets/css/login-page.css" rel="stylesheet" />
@@ -28,10 +29,20 @@
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="bower_components/angular-ui-date/src/date.js"></script>
+
+
+    <script src="bower_components/momentjs/min/moment.min.js"></script>
+    <script src="bower_components/momentjs/min/locales.min.js"></script>
+    <script src="bower_components/humanize-duration/humanize-duration.js"></script>
+    <script src="bower_components/angular-timer/dist/angular-timer.min.js"></script>
+    <script src="assets/script/ngProgressBar/progressBar.js"></script>
+
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/toastr/toastr.min.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
