--- a/MyThesis/Monitor/app/src/edit/edit.html
+++ b/MyThesis/Monitor/app/src/edit/edit.html
@@ -1,6 +1,6 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-12 main__navbar">
     <div class="main__navbar__brand">
-        <span>THESIS</span>
+        <img src="../../assets/img/logo/logo.png" class="main-page__logo " />
         <div class="main__navbar__user">
             <span class="main__navbar__user__text">{{vm.currentUser.FullName}}</span>
             <a class="main__navbar__user__button" ng-click="vm.logout()"><span class="glyphicon glyphicon-off"></span></a>
