--- a/MyThesis/Monitor/app/src/signUpPage/signUpPage.html
+++ b/MyThesis/Monitor/app/src/signUpPage/signUpPage.html
@@ -1,13 +1,16 @@
 ﻿<div class="col-md-offset-4 col-md-4">
     <form class="form-horizontal login-page__form col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
         <div class="form-group">
-            <label class="login-page__form__title control-label">THESIS</label>
+            <img src="../../assets/img/logo/logo.png" class="login-page__logo " />
         </div>
         <div class="form-group">
             <input type="text" class="form-control login-page__form__input" placeholder="Tài khoản" ng-model="vm.newUser.UserName">
         </div>
         <div class="form-group">
             <input type="number" class="form-control login-page__form__input" placeholder="Số điện thoại" ng-model="vm.newUser.Phone">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control login-page__form__input" placeholder="Họ và tên" ng-model="vm.newUser.FullName">
         </div>
         <div class="form-group">
             <input type="password" class="form-control login-page__form__input" placeholder="Mật khẩu" ng-model="vm.newUser.Password">
