--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -56,7 +56,7 @@
             </div>-->
             <div class="dropdown-form">
                 <button class="btn btn-primary" data-toggle="collapse" data-target=".nav-collapse" id="mainToggleButton">
-                    Tùy chỉnh
+                    Tùy chỉnh mô phỏng
                 </button>
 
                 <ng-progressbar ng-if="vm.progressBarSettings.isDisplay" type="info" max="{{vm.progressBarSettings.totalTimes}}" start="{{vm.progressBarSettings.isRunning}}" class="countdown__bar"></ng-progressbar>
