new date-picker

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -16,6 +16,7 @@
     <link href="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.css" rel="stylesheet" />
     <link href="assets/script/leaflet-openweathermap/leaflet-openweathermap.css" rel="stylesheet" />
     <link href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" />
+    <link href="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" rel="stylesheet" />
 
     <link href="assets/css/common.css" rel="stylesheet" />
     <link href="assets/css/login-page.css" rel="stylesheet" />
@@ -44,6 +45,7 @@
     <script src="assets/script/ngProgressBar/progressBar.js"></script>
 
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
     <script src="bower_components/toastr/toastr.min.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
     <script src="bower_components/spin.js/spin.min.js"></script>
