--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -50,25 +50,44 @@
                 <ng-progressbar ng-if="vm.progressBarSettings.isDisplay" type="info" max="{{vm.progressBarSettings.totalTimes}}" start="{{vm.progressBarSettings.isRunning}}" class="countdown__bar"></ng-progressbar>
                 <div class="nav-collapse collapse">
                     <div class="nav-collapse collapse">
-                        <ul class="dropdown-form__list">
+                        <!--<ul class="dropdown-form__list">
                             <li class="active">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="timer">Thời gian mô phỏng (giây)</label>
-                                        <input type="number" class="form-control" id="timer" placeholder="Thời gian mô phỏng" ng-model="vm.simulateSettings.totalTime">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="timerStart">Ngày bắt đầu</label>
-                                        <input class="form-control" placeholder="Ngày bắt đầu" id="timerStart" ui-date ng-model="vm.simulateSettings.startAt">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="timerEnd">Ngày kết thúc</label>
-                                        <input class="form-control" placeholder="Ngày kết thúc" id="timerEnd" ui-date ng-model="vm.simulateSettings.endAt">
-                                    </div>
-                                    <button type="submit" class="btn btn-primary" ng-click="vm.applySettings()">Áp dụng</button>
-                                </form>
+
                             </li>
-                        </ul>
+                        </ul>-->
+                        <form class="dropdown-form__content">
+                            <div class="form-group">
+                                <label for="timer">Tổng thời gian mô phỏng (đơn vị giây)</label>
+                                <input type="number" class="form-control" id="timer" placeholder="Thời gian mô phỏng" ng-model="vm.simulateSettings.totalTime">
+                            </div>
+                            <div class="form-group">
+                                <label>Thời gian bắt đầu</label>
+                                <br/>
+                                <datetimepicker min-date="minDate" hour-step="1"
+                                                minute-step="15" ng-model="vm.simulateSettings.startAt" show-meridian="true"
+                                                date-format="dd-MM-yyyy" date-options="{showWeeks: false}"
+                                                readonly-date="false"
+                                                hidden-time="false"
+                                                hidden-date="false"
+                                                show-spinners="false"
+                                                readonly-time="false"
+                                                current-text="Ngày hiện tại" close-text="Chọn" clear-text="Xóa"></datetimepicker>
+                            </div>
+                            <div class="form-group">
+                                <label>Thời gian kết thúc</label>
+                                <br/>
+                                <datetimepicker min-date="minDate" hour-step="1"
+                                                minute-step="15" ng-model="vm.simulateSettings.endAt" show-meridian="true" meridians="['Sáng','Chiều']"
+                                                date-format="dd-MM-yyyy" date-options="{showWeeks: false}"
+                                                readonly-date="false"
+                                                hidden-time="false"
+                                                hidden-date="false"
+                                                show-spinners="false"
+                                                readonly-time="false"
+                                                current-text="Ngày hiện tại" close-text="Chọn" clear-text="Xóa"></datetimepicker>
+                            </div>
+                            <button type="submit" class="btn btn-primary" ng-click="vm.applySettings()">Áp dụng</button>
+                        </form>
                     </div>
                 </div>
             </div>
